# podphoenix

./: CMakeLists.txt  Podphoenix.apparmor  clickable.json  clickable.yaml  logo.xcf  manifest.json.in  migration.sql
.github/workflows/: build.yaml
app/: CMakeLists.txt  Podbird.desktop.in  podbird.qml  podcasts.js  podphoenix.qml
app/components/: ActionButton.qml  BlurredBackground.qml  CMakeLists.txt  Card.qml  CardView.qml  CustomProgressBar.qml  CustomSectionHeader.qml  EmptyState.qml  HeaderListItem.qml  SingleValueListItem.qml  TabsList.qml  Walkthrough.qml
app/graphics/: CMakeLists.txt
app/settings/: About.qml  CMakeLists.txt  CleanSetting.qml  Credits.qml  DownloadSetting.qml  ThemeSetting.qml
app/tests/autopilot/: run
app/tests/autopilot/podbird/: __init__.py
app/tests/autopilot/podbird/main/: __init__.py  test_main.py
app/tests/unit/: tst_hellocomponent.qml
app/themes/: CMakeLists.txt  Dark.qml  Light.qml  ThemeManager.qml
app/ui/: CMakeLists.txt  EpisodesPage.qml  EpisodesTab.qml  FullPlayingView.qml  ImportPage.qml  NowPlayingPage.qml  PlayerControls.qml  PodcastsTab.qml  Queue.qml  SearchPage.qml  SettingsPage.qml
app/welcomewizard/: CMakeLists.txt  Slide1.qml  Slide2.qml  Slide3.qml  Slide4.qml  Slide5.qml  Slide6.qml  Slide7.qml  WelcomeWizard.qml
backend/: CMakeLists.txt
backend/modules/Podbird/: backend.cpp  backend.h  filemanager.cpp  filemanager.h
backend/modules/Podphoenix/: backend.cpp  backend.h  filemanager.cpp  filemanager.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
debian/: changelog  control  copyright  rules
po/: CMakeLists.txt  ar.po  bs.po  ca.po  com.mikeasoft.podbird.pot  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  fi.po  fr.po  gd.po  gl.po  he.po  hu.po  id.po  it.po  lv.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sc.po  sl.po  soy.iko.podphoenix.pot  sr.po  sv.po  uk.po  zh_CN.po  zh_TW.po
